--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "id": "tip-of-the-day",
   "displayName": "VS Code Tip of the Day",
   "description": "Daily productivity tips for Visual Studio Code with OS-specific optimizations and easy settings access, enhancing your coding experience one tip at a time",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "publisher": "WrecklessEngineer",
   "license": "MIT",
   "repository": {
@@ -104,7 +104,19 @@
         "tipOfTheDay.language": {
           "type": "string",
           "default": "en",
-          "enum": ["en", "zh", "hi", "es", "fr", "ar", "bn", "pt", "ru", "ja", "he"],
+          "enum": [
+            "en",
+            "zh",
+            "hi",
+            "es",
+            "fr",
+            "ar",
+            "bn",
+            "pt",
+            "ru",
+            "ja",
+            "he"
+          ],
           "enumDescriptions": [
             "English",
             "Chinese (Mandarin) - 中文",
